# connect-udp-library

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lib.bundle  lib.cpp  lib.h  lib.hpp  libopenh264-2.3.1-mac-arm64.dylib.bz2  mediaReceiver.cpp  mediaSender.cpp  mediaSender.hpp  temp.txt  test.cpp  test1.cpp  testDecoder.cpp  testEncoder.cpp  testReceiver.cpp  testReceiverJrtp.cpp  testSender.cpp  testSenderJrtp.cpp  videoReceiver.cpp  videoSender.cpp
build-udp-android/: CMakeLists.txt  boid.txt  lib.cpp  lib.hpp
build-udp-android/build-android/: CMakeCache.txt  Makefile  cmake_install.cmake
build-udp-ios/: CMakeLists.txt
cisco-openh264-0a48f4d/: h264dec  h264enc  openh264.pc
jrtplib-3.11.2/: CMakeLists.txt
jrtplib-3.11.2/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
jrtplib-3.11.2/cmake/cmake/: JRTPLIBConfig.cmake
jrtplib-3.11.2/cmake/examples/: Makefile  cmake_install.cmake  example1  example2  example3  example4  example5  example6  example7  example8
jrtplib-3.11.2/cmake/pkgconfig/: jrtplib.pc
jrtplib-3.11.2/cmake/src/: Makefile  cmake_install.cmake  rtpconfig.h
